--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.7"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'androidx.biometric:biometric:1.0.0'
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0'
 }
