--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,20 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="ua.willeco.clicon.AuthorizationActivity">
+        <activity android:name="ua.willeco.clicon.AuthorizationActivity"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
                 android:name="ua.willeco.clicon.MainActivity"
+                android:screenOrientation="portrait"
                 android:label=""
-        android:theme="@style/AppThemeII">
+                android:theme="@style/AppThemeII">
         </activity>
         <meta-data
                 android:name="preloaded_fonts"
