--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,25 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
+            android:theme="@style/MainAppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="ua.willeco.clicon.AuthorizationActivity"
-                android:screenOrientation="portrait">
+        <activity android:name="ua.willeco.clicon.ui.AuthorizationActivity"
+                android:screenOrientation="portrait"
+                android:theme="@style/MainAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-                android:name="ua.willeco.clicon.MainActivity"
+                android:name="ua.willeco.clicon.ui.MainActivity"
                 android:screenOrientation="portrait"
                 android:label=""
-                android:theme="@style/AppThemeII">
+                android:theme="@style/MainAppTheme">
         </activity>
         <meta-data
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts"/>
     </application>
-
 </manifest>
