--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
             targetCompatibility JavaVersion.VERSION_1_8
         }
     }
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -46,14 +50,17 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-
+    //Loader dialog
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     //RxJava
     implementation "io.reactivex.rxjava2:rxjava:2.2.7"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //Dagger2
     implementation "com.google.dagger:dagger:2.27"
+    //kapt
     kapt "com.google.dagger:dagger-compiler:2.27"
+    kapt 'androidx.databinding:databinding-compiler-common:3.6.3'
 
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     implementation group: 'commons-codec', name: 'commons-codec', version: '20041127.091804'
